--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -22,7 +22,7 @@
    <h1><u>Funny Johnny</u></h1>
    <p>One day, I tried to take my comic, Funny Johnny, into school to give out to the boys at lunch time. Unfortunately the classroom assistant said they weren't allowed in school and never take them back in. So now I'm going to start scanning them with my printer so I can put them on our website. Here's the first one.</p>
    <h3><u>Funny Johnny #1/2</u></h3>
-   <p><img src="https://www.piggame.co.uk/bcc/comics/Funny Johnny/Funny Johnny #1,2.png" border="2px" alt="Funny Johnny #1/2"/></p>
+   <p><img src="https://www.piggame.co.uk/bcc/comics/Funny Johnny/FunnyJohnny1and2.png" border="2px" alt="Funny Johnny #1/2"/></p>
   </center>
  </body>
 </html>
