--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -28,7 +28,7 @@
    <p>Sorry boys, I was not able to get the funny street coming up yet because I spent ages trying to deal with getting the Funny Johnny to work.</p>
    <p><br/></p>
    <h1><u>Text chat</u></h1>
-   <p>Boys I made us a text chat, you'll need to type the password on your login card. In a few days I might be able to make it that you don't need to type the password, it's a long story.</p>
+   <p>Sorry, text chat currently out of order.</p>
    <iframe src="https://scratch.mit.edu/projects/1036455231/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
   </center>
  </body>
