--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -28,8 +28,8 @@
    <p>Sorry boys, I was not able to get the funny street coming up yet because I spent ages trying to deal with getting the Funny Johnny to work.</p>
    <p><br/></p>
    <h1><u>Text chat</u></h1>
-   <p>Sorry, text chat currently out of order.</p>
-   <iframe src="https://scratch.mit.edu/projects/1036455231/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
+   <p>TEXT CHAT NOW WORKS!!! FLAG TO START.</p>
+   <iframe src="https://scratch.mit.edu/projects/1040091408/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
   </center>
  </body>
 </html>
