--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -29,6 +29,10 @@
    <p><br/></p>
    <h1><u>Text chat</u></h1>
    <p>TEXT CHAT NOW WORKS!!! FLAG TO START.</p>
+   <p>By the way, I have had a lot of questions about whether emojis work, the answer is yes, emojis do work on the text chat.</p>
+   <iframe src="https://scratch.mit.edu/projects/1040091408/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
+   <h1><u>Geometry Dash Fire Edition</u></h1>
+   <p>I made this CRAZY edition of geometry dash, flag to start.(Also if the fire disappeares, it's because your device is to slow but you can still play it 😀)</p>
    <iframe src="https://scratch.mit.edu/projects/1040091408/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
   </center>
  </body>
