--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -28,12 +28,8 @@
    <p>Sorry boys, I was not able to get the funny street coming up yet because I spent ages trying to deal with getting the Funny Johnny to work.</p>
    <p><br/></p>
    <h1><u>Text chat</u></h1>
-   <p>TEXT CHAT NOW WORKS!!! FLAG TO START.</p>
-   <p>By the way, I have had a lot of questions about whether emojis work, the answer is yes, emojis do work on the text chat.</p>
+   <p>Sorry I am having more problems with text chat it's not working right when I code it in scratch so I might delete this one and code a better one in python? By the way, I have had a lot of questions about whether emojis work, the answer is yes, emojis do work on the text chat.</p>
    <iframe src="https://scratch.mit.edu/projects/1040091408/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
-   <h1><u>Geometry Dash Fire Edition</u></h1>
-   <p>I made this CRAZY edition of geometry dash, flag to start.(Also if the fire disappeares, it's because your device is to slow but you can still play it 😀)</p>
-   <iframe src="https://scratch.mit.edu/projects/943529704/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
   </center>
  </body>
 </html>
