--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -28,8 +28,7 @@
    <p>Sorry boys, I was not able to get the funny street coming up yet because I spent ages trying to deal with getting the Funny Johnny to work.</p>
    <p><br/></p>
    <h1><u>Text chat</u></h1>
-   <p>Sorry I am having more problems with text chat it's not working right when I code it in scratch so I might delete this one and code a better one in python? By the way, I have had a lot of questions about whether emojis work, the answer is yes, emojis do work on the text chat.</p>
-   <iframe src="https://scratch.mit.edu/projects/1040091408/embed" allowtransparency="true" width="485" height="402" frameborder="0" allowfullscreen></iframe>
+   <p>Sorry text chat broke AGAIN!</p>
   </center>
  </body>
 </html>
