--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -14,7 +14,7 @@
       <ul>
        <li><a href="boystest5">Home</a></li>
        <li class="selected">Funny Things</li>
-       <li><a href="secretthingsboystest5">Secret Things</li>
+       <li><a href="secretthingsboystest5">Secret Things</a></li>
        <li><a href="notesboystest5">Notes</a></li>
       </ul>
     </nav>
