--- a/boystest5.html
+++ b/boystest5.html
@@ -19,8 +19,8 @@
       </ul>
      </nav>
    </header>
-     <h2><strong>NOTE:</strong>I have just finished making our website... ENJOY! </h2>
-     <h2><strong>NOTE:</strong>I added a text chat on funny things!</h2>
+     <h2><strong>NOTE:</strong>Ok, the text chat broke <i>again</i>, so, to make up for it, I've added a "Silly Scentences Generator" on Funny Things!</h2>
+   
      <p>We don't have many things on our website right now but we soon will!</p>
      <p>Well done for getting onto this website!</p>
      <p>Explore the website, and message me on roblox if you want to add something (pictures or notes)</p>
