--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -28,7 +28,10 @@
    <p>Sorry boys, I was not able to get the funny street coming up yet because I spent ages trying to deal with getting the Funny Johnny to work.</p>
    <p><br/></p>
    <h1><u>Text chat</u></h1>
-   <p>Sorry text chat broke AGAIN!</p>
+   <p>Sorry text chat broke <i>AGAIN!</i></p>
+   <h1><u>Silly Secntence Generator</u></h1>
+   <p>Boys, I made this silly scentence generator to make up for the text chat breaking!</p>
+   <iframe src="https://scratch.mit.edu/projects/1045287262/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </center>
  </body>
 </html>
