--- a/funnythingsboystest5.html
+++ b/funnythingsboystest5.html
@@ -31,10 +31,10 @@
    <p>Sorry text chat broke <i>AGAIN!</i></p>
    <h1><u>Silly Secntence Generator</u></h1>
    <p>Boys, I made this silly scentence generator to make up for the text chat breaking!</p>
-   <iframe src="https://scratch.mit.edu/projects/1045287262/embed" allowtransparency="true" width="800" height="702" frameborder="0" scrolling="no" allowfullscreen></iframe>
-   <h1 class="hl">COMPUTER GAMES!</h1>
+   <iframe src="https://scratch.mit.edu/projects/1045287262/embed" allowtransparency="true" width="970" height="804" frameborder="0" scrolling="no" allowfullscreen></iframe>
+   <h1 class="big-writing">COMPUTER GAMES!</h1>
    <h1><u>Paper Minecraft</u></h1>
-   <iframe src="https://scratch.mit.edu/projects/10128407/embed" allowtransparency="true" width="800" height="702" frameborder="0" scrolling="no" allowfullscreen></iframe>
+   <iframe src="https://scratch.mit.edu/projects/10128407/embed" allowtransparency="true" width="970" height="804" frameborder="0" scrolling="no" allowfullscreen></iframe>
    
   </center>
  </body>
