--- a/boystest5.html
+++ b/boystest5.html
@@ -19,11 +19,14 @@
       </ul>
      </nav>
    </header>
-     <h2><strong>NOTE:</strong>Ok, the text chat broke <i>again</i>, so, to make up for it, I've added a "Silly Scentences Generator" on Funny Things!</h2>
-   
-     <p>We don't have many things on our website right now but we soon will!</p>
-     <p>Well done for getting onto this website!</p>
-     <p>Explore the website, and message me on roblox if you want to add something (pictures or notes)</p>
+   <h2><strong>NOTE:</strong>Ok, the text chat broke <i>again</i>, so, to make up for it, I've added a "Silly Scentences Generator" on Funny Things!</h2>
+   <p>We don't have many things on our website right now but we soon will!</p>
+   <p>Well done for getting onto this website!</p>
+   <p>Explore the website, and message me on roblox if you want to add something (pictures or notes)</p>
+   <h1 class="big-writing">COMPUTER GAMES!!!</h1>
+   <a class="hl1" href="/funnythingsboystest5#ssg">Silly Scentences</a>
+   <a class="hl1" href="/funnythingsboystest5#g1">Paper Minecraft(2d Minecraft)</a>
+   <a class="hl1" href="/funnythingsboystest5#g2">Geometry Dash(2d Jumping Game)</a>
   </center>
  </body>
 </html>
