--- a/boystest5.html
+++ b/boystest5.html
@@ -24,9 +24,11 @@
    <p>Well done for getting onto this website!</p>
    <p>Explore the website, and message me on roblox if you want to add something (pictures or notes)</p>
    <h1 class="big-writing">COMPUTER GAMES!!!</h1>
-   <a class="hl1" href="/funnythingsboystest5#ssg">Silly Scentences</a>
-   <a class="hl1" href="/funnythingsboystest5#g1">Paper Minecraft(2d Minecraft)</a>
-   <a class="hl1" href="/funnythingsboystest5#g2">Geometry Dash(2d Jumping Game)</a>
+   <ul>
+   <li><a class="hl1" href="/funnythingsboystest5#ssg">Silly Scentences</a></li>
+   <li><a class="hl1" href="/funnythingsboystest5#g1">Paper Minecraft(2d Minecraft)</a></li>
+   <li><a class="hl1" href="/funnythingsboystest5#g2">Geometry Dash(2d Jumping Game)</a></li>
+   </ul>
   </center>
  </body>
 </html>
