--- a/boystest5.html
+++ b/boystest5.html
@@ -25,9 +25,9 @@
    <p>Explore the website, and message me on roblox if you want to add something (pictures or notes)</p>
    <h1 class="big-writing">COMPUTER GAMES!!!</h1>
    <ol>
-   <li><a class="hl1" href="/funnythingsboystest5#ssg">Silly Scentences</a></li>
-   <li><a class="hl1" href="/funnythingsboystest5#g1">Paper Minecraft(2d Minecraft)</a></li>
-   <li><a class="hl1" href="/funnythingsboystest5#g2">Geometry Dash(2d Jumping Game)</a></li>
+   <li><a class="hl1" href="funnythingsboystest5#ssg">Silly Scentences</a></li>
+   <li><a class="hl1" href="funnythingsboystest5#g1">Paper Minecraft(2d Minecraft)</a></li>
+   <li><a class="hl1" href="funnythingsboystest5#g2">Geometry Dash(2d Jumping Game)</a></li>
    </ol>
   </center>
  </body>
